--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 16th of August 2020, 298 new confirmed cases and 1 death was recorded in Nigeria</li>
-                            <li>Till date, 49068 cases have been confirmed, 36497 cases have been discharged and 975 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 298 new cases are reported from 16 states- Plateau (108), Kaduna (49), Lagos (47), Ogun (18), Osun (17), FCT (15), Ondo (14), Edo (8), Oyo (6), Akwa Ibom (4), Cross River (4), Borno (3), Ekiti (2), Bauchi (1), Kano (1) and Rivers (1).</li>
+                            <li>On the 17th of August 2020, 417 new confirmed cases and 2 deaths were recorded in Nigeria</li>
+                            <li>Till date, 49485 cases have been confirmed, 36834 cases have been discharged and 977 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 417 new cases are reported from 17 states- Lagos(207), Kaduna(44), Ondo(38), Abia(28), Anambra(21), Plateau(20), Bauchi(13), Oyo(9), Ebonyi(9), Delta(7), Edo(7), Enugu(6), Niger(3), Gombe(2), Ogun(1), FCT(1) and Kano(1).</li>
                         </ul>
                     </div>
                 </div>
