--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 17th of August 2020, 417 new confirmed cases and 2 deaths were recorded in Nigeria</li>
-                            <li>Till date, 49485 cases have been confirmed, 36834 cases have been discharged and 977 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 417 new cases are reported from 17 states- Lagos(207), Kaduna(44), Ondo(38), Abia(28), Anambra(21), Plateau(20), Bauchi(13), Oyo(9), Ebonyi(9), Delta(7), Edo(7), Enugu(6), Niger(3), Gombe(2), Ogun(1), FCT(1) and Kano(1).</li>
+                            <li>On the 18th of August 2020, 410 new confirmed cases and 4 deaths were recorded in Nigeria.</li>
+                            <li>The 410 new cases are reported from 16 states- Lagos (210), FCT (45), Ondo (30), Plateau (21), Edo (19), Ogun (16), Oyo (13), Nasarawa (12), Bauchi (11), Enugu (10), Kwara (7), Kaduna (6), Anambra (4), Ebonyi (3), Abia (2), Rivers (1).</li>
+                            <li>Till date, 49895 cases have been confirmed, 37051 cases have been discharged and 981 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
                         </ul>
                     </div>
                 </div>
