--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 18th of August 2020, 410 new confirmed cases and 4 deaths were recorded in Nigeria.</li>
-                            <li>The 410 new cases are reported from 16 states- Lagos (210), FCT (45), Ondo (30), Plateau (21), Edo (19), Ogun (16), Oyo (13), Nasarawa (12), Bauchi (11), Enugu (10), Kwara (7), Kaduna (6), Anambra (4), Ebonyi (3), Abia (2), Rivers (1).</li>
-                            <li>Till date, 49895 cases have been confirmed, 37051 cases have been discharged and 981 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>On the 19th of August 2020, 593 new confirmed cases and 4 deaths were recorded in Nigeria.</li>
+                            <li>Till date, 50488 cases have been confirmed, 37304 cases have been discharged and 985 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 593 new cases are reported from 16 states- Plateau (186), Lagos (172), FCT (62), Oyo (27), Delta (25), Rivers (20), Ondo (19), Edo (18), Kaduna (17), Enugu (12), Akwa Ibom (10), Ogun (7), Abia (6), Gombe (6), Kano (3) and Osun (3).</li>
                         </ul>
                     </div>
                 </div>
