--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 19th of August 2020, 593 new confirmed cases and 4 deaths were recorded in Nigeria.</li>
-                            <li>Till date, 50488 cases have been confirmed, 37304 cases have been discharged and 985 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 593 new cases are reported from 16 states- Plateau (186), Lagos (172), FCT (62), Oyo (27), Delta (25), Rivers (20), Ondo (19), Edo (18), Kaduna (17), Enugu (12), Akwa Ibom (10), Ogun (7), Abia (6), Gombe (6), Kano (3) and Osun (3).</li>
+                            <li>On the 20th of August 2020, 476 new confirmed cases and 7 deaths were recorded in Nigeria.</li>
+                            <li>Till date, 50964 cases have been confirmed, 37569 cases have been discharged and 992 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 476 new cases are reported from 18 states- Lagos (235), FCT (44), Kaduna (41), Borno (33), Plateau (28), Abia (13), Edo (13), Rivers (12), Imo (11), Oyo (10), Kano (9), Kwara (7), Enugu (5), Katsina (5), Gombe (4), Ogun (4), Nasarawa (1), Zamfara (1).</li>
                         </ul>
                     </div>
                 </div>
