--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 20th of August 2020, 476 new confirmed cases and 7 deaths were recorded in Nigeria.</li>
-                            <li>Till date, 50964 cases have been confirmed, 37569 cases have been discharged and 992 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 476 new cases are reported from 18 states- Lagos (235), FCT (44), Kaduna (41), Borno (33), Plateau (28), Abia (13), Edo (13), Rivers (12), Imo (11), Oyo (10), Kano (9), Kwara (7), Enugu (5), Katsina (5), Gombe (4), Ogun (4), Nasarawa (1), Zamfara (1).</li>
+                            <li>On the 21st of August 2020, 340 new confirmed cases and 4 deaths were recorded in Nigeria.</li>
+                            <li>Till date, 51304 cases have been confirmed, 37885 cases have been discharged and 996 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 340 new cases are reported from 19 states- Kaduna(63), FCT(51), Plateau(38), Lagos(33), Delta(25), Gombe (21), Adamawa(21), Edo(20), Katsina(17), Akwa Ibom(11), Ekiti(10), Rivers(9), Ondo(5), Ebonyi(4), Cross River(3), Ogun(3), Sokoto(2), Imo(2), Nasarawa (2)
+                                .</li>
                         </ul>
                     </div>
                 </div>
