--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 21st of August 2020, 340 new confirmed cases and 4 deaths were recorded in Nigeria.</li>
-                            <li>Till date, 51304 cases have been confirmed, 37885 cases have been discharged and 996 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 340 new cases are reported from 19 states- Kaduna(63), FCT(51), Plateau(38), Lagos(33), Delta(25), Gombe (21), Adamawa(21), Edo(20), Katsina(17), Akwa Ibom(11), Ekiti(10), Rivers(9), Ondo(5), Ebonyi(4), Cross River(3), Ogun(3), Sokoto(2), Imo(2), Nasarawa (2)
+                            <li>On the 22nd of August 2020, 601 new confirmed cases and 1 death were recorded in Nigeria.</li>
+                            <li>Till date, 51905 cases have been confirmed, 38767 cases have been discharged and 997 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 601 new cases are reported from 21 states- Lagos(404), FCT(37), Oyo(19), Ondo(14), Abia(13), Enugu(13), Kaduna(13), Edo(12), Kano(12), Kwara(11), Ebonyi(10), Nasarawa(7), Ogun(6), Osun(5), Delta(5), Niger(5), Plateau(4), Bayelsa(4), Katsina(3), Ekiti(2), Imo(2)
                                 .</li>
                         </ul>
                     </div>
