--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 22nd of August 2020, 601 new confirmed cases and 1 death were recorded in Nigeria.</li>
-                            <li>Till date, 51905 cases have been confirmed, 38767 cases have been discharged and 997 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 601 new cases are reported from 21 states- Lagos(404), FCT(37), Oyo(19), Ondo(14), Abia(13), Enugu(13), Kaduna(13), Edo(12), Kano(12), Kwara(11), Ebonyi(10), Nasarawa(7), Ogun(6), Osun(5), Delta(5), Niger(5), Plateau(4), Bayelsa(4), Katsina(3), Ekiti(2), Imo(2)
+                            <li>On the 23rd of August 2020, 322 new confirmed cases and 5 deaths were recorded in Nigeria.</li>
+                            <li>Till date, 52227 cases have been confirmed, 38945 cases have been discharged and 1002 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 322 new cases are reported from 18 states- Lagos(130), Bauchi(36), FCT(25), Edo(17), Bayelsa(14), Ogun(14), Oyo(14), Anambra(13), Kaduna(12), Ondo(11), Abia(10), Osun(6), Plateau(5), Kwara(5), Kano(4), Ebonyi(3), Sokoto(2), Borno(1)
                                 .</li>
                         </ul>
                     </div>
