--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 23rd of August 2020, 322 new confirmed cases and 5 deaths were recorded in Nigeria.</li>
-                            <li>Till date, 52227 cases have been confirmed, 38945 cases have been discharged and 1002 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 322 new cases are reported from 18 states- Lagos(130), Bauchi(36), FCT(25), Edo(17), Bayelsa(14), Ogun(14), Oyo(14), Anambra(13), Kaduna(12), Ondo(11), Abia(10), Osun(6), Plateau(5), Kwara(5), Kano(4), Ebonyi(3), Sokoto(2), Borno(1)
+                            <li>On the 24th of August 2020, 321 new confirmed cases and 2 deaths were recorded in Nigeria.</li>
+                            <li>Till date, 52548 cases have been confirmed, 39257 cases have been discharged and 1004 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 321 new cases are reported from 24 states- Lagos (98), FCT (34), Kaduna (30), Nasarawa (25), Benue (21), Plateau (17), Rivers (15), Adamawa (11), Ogun (11), Enugu (9), Edo (8), Delta (7), Ekiti (7), Gombe (5), Ebonyi (4), Bayelsa (3), Kano (3), Ondo (3), Cross River (2), Imo (2), Kebbi (2), Niger (2), Abia (1), Bauchi (1)
                                 .</li>
                         </ul>
                     </div>
