--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 24th of August 2020, 321 new confirmed cases and 2 deaths were recorded in Nigeria.</li>
-                            <li>Till date, 52548 cases have been confirmed, 39257 cases have been discharged and 1004 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 321 new cases are reported from 24 states- Lagos (98), FCT (34), Kaduna (30), Nasarawa (25), Benue (21), Plateau (17), Rivers (15), Adamawa (11), Ogun (11), Enugu (9), Edo (8), Delta (7), Ekiti (7), Gombe (5), Ebonyi (4), Bayelsa (3), Kano (3), Ondo (3), Cross River (2), Imo (2), Kebbi (2), Niger (2), Abia (1), Bauchi (1)
+                            <li>On the 25th of August 2020, 252 new confirmed cases and 3 deaths were recorded in Nigeria.</li>
+                            <li>Till date, 52800 cases have been confirmed, 39964 cases have been discharged and 1007 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 252 new cases are reported from 18 states- Plateau (50), Enugu (35), Rivers (27), Lagos (26), FCT (18), Kaduna (18), Ekiti (10), Kano (10), Taraba (9), Anambra (8), Edo (8), Oyo (8), Delta (7), Ogun (6), Abia (5), Bayelsa (5), Ebonyi (1), Osun (1)
                                 .</li>
                         </ul>
                     </div>
