--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 25th of August 2020, 252 new confirmed cases and 3 deaths were recorded in Nigeria.</li>
-                            <li>Till date, 52800 cases have been confirmed, 39964 cases have been discharged and 1007 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 252 new cases are reported from 18 states- Plateau (50), Enugu (35), Rivers (27), Lagos (26), FCT (18), Kaduna (18), Ekiti (10), Kano (10), Taraba (9), Anambra (8), Edo (8), Oyo (8), Delta (7), Ogun (6), Abia (5), Bayelsa (5), Ebonyi (1), Osun (1)
+                            <li>On the 26th of August 2020, 221 new confirmed cases and 3 deaths were recorded in Nigeria.</li>
+                            <li>Till date, 53021 cases have been confirmed, 40281 cases have been discharged and 1010 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 221 new cases are reported from 20 states- Plateau (60), FCT (33), Kaduna (26), Rivers (18), Lagos (17), Enugu (9), Kwara (9), Ondo (9), Nasarawa (6), Gombe (5), Anambra (5), Delta (4), Abia (4), Imo (3), Edo (2), Ogun (2), Oyo (2), Osun (2), Bauchi (1), Kano (1)
                                 .</li>
                         </ul>
                     </div>
