--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 26th of August 2020, 221 new confirmed cases and 3 deaths were recorded in Nigeria.</li>
-                            <li>Till date, 53021 cases have been confirmed, 40281 cases have been discharged and 1010 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 221 new cases are reported from 20 states- Plateau (60), FCT (33), Kaduna (26), Rivers (18), Lagos (17), Enugu (9), Kwara (9), Ondo (9), Nasarawa (6), Gombe (5), Anambra (5), Delta (4), Abia (4), Imo (3), Edo (2), Ogun (2), Oyo (2), Osun (2), Bauchi (1), Kano (1)
+                            <li>On the 27th of August 2020, 296 new confirmed cases and 1 death were recorded in Nigeria.</li>
+                            <li>Till date, 53317 cases have been confirmed, 40726 cases have been discharged and 1011 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 296 new cases are reported from 17 states- Plateau (85), Enugu (46), Oyo (31), Lagos (21), Rivers (20), FCT (15), Kaduna (13), Bauchi (12), Delta (11), Ekiti (11), Akwa Ibom (7), Ebonyi (6), Kwara (5), Ogun (4), Osun (4), Gombe (3), Niger (2)
                                 .</li>
                         </ul>
                     </div>
