--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 27th of August 2020, 296 new confirmed cases and 1 death were recorded in Nigeria.</li>
-                            <li>Till date, 53317 cases have been confirmed, 40726 cases have been discharged and 1011 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 296 new cases are reported from 17 states- Plateau (85), Enugu (46), Oyo (31), Lagos (21), Rivers (20), FCT (15), Kaduna (13), Bauchi (12), Delta (11), Ekiti (11), Akwa Ibom (7), Ebonyi (6), Kwara (5), Ogun (4), Osun (4), Gombe (3), Niger (2)
+                            <li>On the 28th of August 2020, 160 new confirmed cases and no deaths were recorded in Nigeria.</li>
+                            <li>Till date, 53477 cases have been confirmed, 41017 cases have been discharged and 1011 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 160 new cases are reported from 15 states- Plateau (44), Lagos (27), Katsina (18), Edo (15), FCT (14), Ondo (10), Oyo (9), Kwara (6), Abia (4), Nasarawa (4), Kano (3), Ekiti (2), Kaduna (2), Kebbi (1), Ogun (1)
                                 .</li>
                         </ul>
                     </div>
