--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 28th of August 2020, 160 new confirmed cases and no deaths were recorded in Nigeria.</li>
-                            <li>Till date, 53477 cases have been confirmed, 41017 cases have been discharged and 1011 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 160 new cases are reported from 15 states- Plateau (44), Lagos (27), Katsina (18), Edo (15), FCT (14), Ondo (10), Oyo (9), Kwara (6), Abia (4), Nasarawa (4), Kano (3), Ekiti (2), Kaduna (2), Kebbi (1), Ogun (1)
+                            <li>On the 29th of August 2020, 250 new confirmed cases and 0 deaths were recorded in Nigeria.</li>
+                            <li>Till date, 53727 cases have been confirmed, 41314 cases have been discharged and 1011 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 250 new cases are reported from 20 states- Plateau (69), FCT (41), Lagos (21), Delta (14), Kaduna (14), Bayelsa (13), Enugu (13), Ekiti (11), Bauchi (9), Ogun (8), Edo (7), Oyo (7), Rivers (6), Adamawa (4), Osun (4), Nasarawa (3), Ebonyi (2), Kwara (2), Gombe (1), Imo (1)
                                 .</li>
                         </ul>
                     </div>
