--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 29th of August 2020, 250 new confirmed cases and 0 deaths were recorded in Nigeria.</li>
-                            <li>Till date, 53727 cases have been confirmed, 41314 cases have been discharged and 1011 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 250 new cases are reported from 20 states- Plateau (69), FCT (41), Lagos (21), Delta (14), Kaduna (14), Bayelsa (13), Enugu (13), Ekiti (11), Bauchi (9), Ogun (8), Edo (7), Oyo (7), Rivers (6), Adamawa (4), Osun (4), Nasarawa (3), Ebonyi (2), Kwara (2), Gombe (1), Imo (1)
+                            <li>On the 31st of August 2020, 143 new confirmed cases and 0 deaths were recorded in Nigeria.</li>
+                            <li>Till date, 54008 cases have been confirmed, 41638 cases have been discharged and 1013 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 143 new cases are reported from 18 states- Plateau (35), Kaduna (21), Lagos (19), FCT (13), Ebonyi (9), Adamawa (7), Enugu (7), Katsina (7), Edo (6), Kwara (5), Osun (3), Anambra (2), Kano (2), Niger (2), Ogun (2), Benue (1), Borno (1), Sokoto (1)
                                 .</li>
                         </ul>
                     </div>
