--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 31st of August 2020, 143 new confirmed cases and 0 deaths were recorded in Nigeria.</li>
-                            <li>Till date, 54008 cases have been confirmed, 41638 cases have been discharged and 1013 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 143 new cases are reported from 18 states- Plateau (35), Kaduna (21), Lagos (19), FCT (13), Ebonyi (9), Adamawa (7), Enugu (7), Katsina (7), Edo (6), Kwara (5), Osun (3), Anambra (2), Kano (2), Niger (2), Ogun (2), Benue (1), Borno (1), Sokoto (1)
+                            <li>On the 1st of September 2020, 239 new confirmed cases and 10 deaths were recorded in Nigeria
+                                .</li>
+                            <li>Till date, 54247 cases have been confirmed, 42010 cases have been discharged and 1023 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 239 new cases are reported from 15 states- Plateau (116), FCT (33), Lagos (19), Ekiti (12), Kaduna (11), Ogun (11), Ebonyi (8), Benue (7), Abia (5), Delta (5), Ondo (4), Edo (3), Imo (2), Osun (2), Bauchi (1)
                                 .</li>
                         </ul>
                     </div>
