--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 1st of September 2020, 239 new confirmed cases and 10 deaths were recorded in Nigeria
+                            <li>On the 2nd of September 2020, 216 new confirmed cases and 4 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 54247 cases have been confirmed, 42010 cases have been discharged and 1023 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 239 new cases are reported from 15 states- Plateau (116), FCT (33), Lagos (19), Ekiti (12), Kaduna (11), Ogun (11), Ebonyi (8), Benue (7), Abia (5), Delta (5), Ondo (4), Edo (3), Imo (2), Osun (2), Bauchi (1)
+                            <li>Till date, 54,463 cases have been confirmed, 42439 cases have been discharged and 1027 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 216 new cases are reported from 16 states- Plateau (59), Rivers (27), Abia (22), Lagos (20), Oyo (18), Enugu (17), Kaduna (11), FCT (11), Ogun (10), Ebonyi (4), Osun (4), Ekiti (4), Delta (3), Edo (3), Akwa Ibom (2), Bauchi (1)
                                 .</li>
                         </ul>
                     </div>
