--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 2nd of September 2020, 216 new confirmed cases and 4 deaths were recorded in Nigeria
+                            <li>On the 3rd of September 2020, 125 new confirmed cases and 21 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 54,463 cases have been confirmed, 42439 cases have been discharged and 1027 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 216 new cases are reported from 16 states- Plateau (59), Rivers (27), Abia (22), Lagos (20), Oyo (18), Enugu (17), Kaduna (11), FCT (11), Ogun (10), Ebonyi (4), Osun (4), Ekiti (4), Delta (3), Edo (3), Akwa Ibom (2), Bauchi (1)
+                            <li>Till date, 54588 cases have been confirmed, 42627 cases have been discharged and 1048 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 125 new cases are reported from 13 states- Lagos (42), FCT (25), Katsina (14), Kaduna (11), Kwara (8), Ondo (7), Delta (4), Anambra (3) Oyo (3), Edo (2), Ogun (2), Osun (2), Cross River (1)
                                 .</li>
                         </ul>
                     </div>
