--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 3rd of September 2020, 125 new confirmed cases and 21 deaths were recorded in Nigeria
+                            <li>On the 4th of September 2020, 156 new confirmed cases and 3 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 54588 cases have been confirmed, 42627 cases have been discharged and 1048 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 125 new cases are reported from 13 states- Lagos (42), FCT (25), Katsina (14), Kaduna (11), Kwara (8), Ondo (7), Delta (4), Anambra (3) Oyo (3), Edo (2), Ogun (2), Osun (2), Cross River (1)
+                            <li>Till date, 54743 cases have been confirmed, 42816 cases have been discharged and 1051 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 156 new cases are reported from 17 states- Lagos (36), FCT (35), Oyo (29), Kaduna (10), Abia (9), Osun (5), Ogun (5), Enugu (5), Rivers (4), Nasarawa (3), Ekiti (3), Imo (3), Edo (2), Kwara (2), Katsina (2), Plateau (2), Niger (1)
                                 .</li>
                         </ul>
                     </div>
