--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 4th of September 2020, 156 new confirmed cases and 3 deaths were recorded in Nigeria
+                            <li>On the 6th of September 2020, 100 new confirmed cases and 3 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 54743 cases have been confirmed, 42816 cases have been discharged and 1051 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 156 new cases are reported from 17 states- Lagos (36), FCT (35), Oyo (29), Kaduna (10), Abia (9), Osun (5), Ogun (5), Enugu (5), Rivers (4), Nasarawa (3), Ekiti (3), Imo (3), Edo (2), Kwara (2), Katsina (2), Plateau (2), Niger (1)
+                            <li>Till date, 55,005 cases have been confirmed, 43,013 cases have been discharged and 1,057 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
+                            <li>The 162 new cases are reported from 15 states- Lagos (53), Gombe (21), Oyo (19), Delta (12), Ondo (11), Plateau (10), Ebonyi (9), FCT (6), Kwara (6), Kaduna (5), Rivers (3), Ogun (2), Anambra (2), Imo (2), Ekiti (1)The 100 new cases are reported from 10 states- Lagos (39), FCT (22), Kaduna (19), Oyo (7), Ebonyi (6), Edo (3), Katsina (1), Ekiti (1), Bauchi (1), Nasarawa (1)
                                 .</li>
                         </ul>
                     </div>
