--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 9th of September 2020, 176 new confirmed cases and 3 deaths were recorded in Nigeria
+                            <li>On the 10th of September 2020, 197 new confirmed cases and 5 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 55632 cases have been confirmed, 43610 cases have been discharged and 1070 deaths have been recorded in 36 states and the Federal Capital Territory.</li>
-                            <li>The 176 new cases are reported from 17 states- FCT (40), Lagos (34), Plateau (26), Enugu (14), Delta (12), Ogun (12), Ondo (9), Oyo (8), Ekiti (6), Ebonyi (4), Adamawa (2), Nasarawa (2), Kwara(2), Rivers (2), Edo (1), Osun (1), Bauchi (1)
+                            <li>Till date, 55829 cases have been confirmed, 43810 cases have been discharged and 1075 deaths have been recorded in 36 states and the Federal Capital Territory
+                                .</li>
+                            <li>The 197 new cases are reported from 13 states- Plateau (83), Lagos (48), Kaduna (17), FCT (16), Ogun (11), Katsina (7), Imo (4), Edo (3), Nasarawa (3), Rivers (2), Bayelsa (1), Oyo (1), Osun (1)
                                 .</li>
                         </ul>
                     </div>
