--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 10th of September 2020, 197 new confirmed cases and 5 deaths were recorded in Nigeria
+                            <li>On the 11th of September 2020, 188 new confirmed cases and 1 death were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 55829 cases have been confirmed, 43810 cases have been discharged and 1075 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 56,017 cases have been confirmed, 43998 cases have been discharged and 1076 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 197 new cases are reported from 13 states- Plateau (83), Lagos (48), Kaduna (17), FCT (16), Ogun (11), Katsina (7), Imo (4), Edo (3), Nasarawa (3), Rivers (2), Bayelsa (1), Oyo (1), Osun (1)
+                            <li>The 188 new cases are reported from 19 states- Lagos (47), Enugu (25), Plateau (21), FCT (14), Abia (11), Delta (10), Bauchi (8), Ondo (8), Kaduna (8), Ogun (6), Imo (5), Benue (4), Katsina (4), Taraba (4), Edo (3), Kwara (3), Oyo (3), Rivers (2), Yobe (2)
                                 .</li>
                         </ul>
                     </div>
