--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 11th of September 2020, 188 new confirmed cases and 1 death were recorded in Nigeria
+                            <li>On the 12th of September 2020, 160 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 56,017 cases have been confirmed, 43998 cases have been discharged and 1076 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 56177 cases have been confirmed, 44088 cases have been discharged and 1078 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 188 new cases are reported from 19 states- Lagos (47), Enugu (25), Plateau (21), FCT (14), Abia (11), Delta (10), Bauchi (8), Ondo (8), Kaduna (8), Ogun (6), Imo (5), Benue (4), Katsina (4), Taraba (4), Edo (3), Kwara (3), Oyo (3), Rivers (2), Yobe (2)
+                            <li>The 160 new cases are reported from 13 states- FCT (39), Plateau (39), Lagos (30), Kaduna (23), Katsina (7), Rivers (6), Oyo (6), Yobe (3), Benue (3), Bayelsa (1), Abia (1), Edo (1), Ekiti (1)
                                 .</li>
                         </ul>
                     </div>
