--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 12th of September 2020, 160 new confirmed cases and 2 deaths were recorded in Nigeria
+                            <li>On the 13th of September 2020, 79 new confirmed cases and 4 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 56177 cases have been confirmed, 44088 cases have been discharged and 1078 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 56256 cases have been confirmed, 44152 cases have been discharged and 1082 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 160 new cases are reported from 13 states- FCT (39), Plateau (39), Lagos (30), Kaduna (23), Katsina (7), Rivers (6), Oyo (6), Yobe (3), Benue (3), Bayelsa (1), Abia (1), Edo (1), Ekiti (1)
+                            <li>The 79 new cases are reported from 13 states- Lagos (30), Kaduna (17), Ogun (7), Anambra (5), Kano (4), Katsina (3), FCT (3), Akwa Ibom (3), Oyo (2), Rivers (2), Delta (1), Plateau (1), Ondo (1)
                                 .</li>
                         </ul>
                     </div>
