--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 13th of September 2020, 79 new confirmed cases and 4 deaths were recorded in Nigeria
+                            <li>On the 14th of September 2020, 132 new confirmed cases and 1 death were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 56256 cases have been confirmed, 44152 cases have been discharged and 1082 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 56388 cases have been confirmed, 44337 cases have been discharged and 1083 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 79 new cases are reported from 13 states- Lagos (30), Kaduna (17), Ogun (7), Anambra (5), Kano (4), Katsina (3), FCT (3), Akwa Ibom (3), Oyo (2), Rivers (2), Delta (1), Plateau (1), Ondo (1)
+                            <li>The 132 new cases are reported from 11 states- Lagos (52), Gombe (27), Plateau (17), Kwara (10), Enugu (9), Ogun (9), Katsina (3), Ekiti (2), Bauchi (1), Osun (1), Rivers (1)
                                 .</li>
                         </ul>
                     </div>
