--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 14th of September 2020, 132 new confirmed cases and 1 death were recorded in Nigeria
+                            <li>On the 15th of September 2020, 90 new confirmed cases and 5 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 56388 cases have been confirmed, 44337 cases have been discharged and 1083 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 56478 cases have been confirmed, 44430 cases have been discharged and 1088 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 132 new cases are reported from 11 states- Lagos (52), Gombe (27), Plateau (17), Kwara (10), Enugu (9), Ogun (9), Katsina (3), Ekiti (2), Bauchi (1), Osun (1), Rivers (1)
-                                .</li>
+                            <li>The 90 new cases are reported from 8 states- Lagos (33), Plateau (27), Kaduna (17), Ogun (6), FCT (4), Anambra (1), Ekiti (1), Nasarawa (1).
+                            </li>
                         </ul>
                     </div>
                 </div>
