--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 15th of September 2020, 90 new confirmed cases and 5 deaths were recorded in Nigeria
+                            <li>On the 16th of September 2020, 126 new confirmed cases and 3 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 56478 cases have been confirmed, 44430 cases have been discharged and 1088 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 56604 cases have been confirmed, 47872 cases have been discharged and 1091 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 90 new cases are reported from 8 states- Lagos (33), Plateau (27), Kaduna (17), Ogun (6), FCT (4), Anambra (1), Ekiti (1), Nasarawa (1).
+                            <li>The 126 new cases are reported from 17 states- FCT (37), Lagos (27), Plateau (16), Kaduna (9), Abia (7), Gombe (6), Ondo (6), Imo (5), Delta (2), Ekiti (2), Kwara (2), Oyo (2), Bauchi (1), Kano (1), Katsina (1), Ogun (1), Yobe (1).
                             </li>
                         </ul>
                     </div>
