--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 16th of September 2020, 126 new confirmed cases and 3 deaths were recorded in Nigeria
+                            <li>On the 18th of September 2020, 221 new confirmed cases and 1 death were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 56604 cases have been confirmed, 47872 cases have been discharged and 1091 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 56956 cases have been confirmed, 48305 cases have been discharged and 1094 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 126 new cases are reported from 17 states- FCT (37), Lagos (27), Plateau (16), Kaduna (9), Abia (7), Gombe (6), Ondo (6), Imo (5), Delta (2), Ekiti (2), Kwara (2), Oyo (2), Bauchi (1), Kano (1), Katsina (1), Ogun (1), Yobe (1).
+                            <li>The 221 new cases are reported from 18 states- Lagos (59), Abia (46), FCT (22), Gombe (20), Plateau (17), Rivers (11), Bauchi (7), Benue (6), Ekiti (6), Imo (6), Kaduna (4), Kwara (4), Ondo (4), Ogun (3), Osun (3), Bayelsa (1), Edo (1), Kano (1).
                             </li>
                         </ul>
                     </div>
