--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Get the real-time most up-to-date Figures, Info, Tips, Facts and all you need to know about COVID19 across Nigeria. Developed by Shamxeed.">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://img2.pngio.com/nigeria-flag-image-country-flags-nigeria-flag-png-250_250.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <title>Covid19 Update Nigeria</title>
 </head>
 <body>
@@ -18,22 +19,27 @@
             </div>
             <div class="subsequentDivs grey">
                 <h3>Sample Tested</h3>
+                <i class="fas fa-viruses"></i>
                 <p id="sample" class="figures">loding...</p>
             </div>
             <div class="subsequentDivs blue">
                 <h3>Confirmed Cases</h3>
+                <i class="fas fa-viruses"></i>
                 <p id="confirmedCases" class="figures">loding...</p>
             </div>
             <div class="subsequentDivs yello">
                 <h3>Active Cases</h3>
+                <i class="fas fa-viruses"></i>
                 <p id="activeCases" class="figures">loding...</p>
             </div>
             <div class="subsequentDivs green">
                 <h3>Discharged Cases</h3>
+                <i class="fas fa-viruses"></i>
                 <p id="discharged" class="figures">loding...</p>
             </div>
             <div id="blink" class="subsequentDivs red">
                 <h3>Death</h3>
+                <i class="fas fa-viruses"></i>
                 <p id="death" class="figures">loding...</p>
             </div>
         </div>
