--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div id="blink" class="subsequentDivs red">
                 <h3>Death</h3>
-                <i class="fas fa-viruses"></i>
+                <i class="fas fa-viruses"></i> 
                 <p id="death" class="figures">loding...</p>
             </div>
         </div>
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 18th of September 2020, 221 new confirmed cases and 1 death were recorded in Nigeria
+                            <li>On the 20th of September 2020, 97 new confirmed cases and 3 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 56956 cases have been confirmed, 48305 cases have been discharged and 1094 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 57242 cases have been confirmed, 48569 cases have been discharged and 1098 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 221 new cases are reported from 18 states- Lagos (59), Abia (46), FCT (22), Gombe (20), Plateau (17), Rivers (11), Bauchi (7), Benue (6), Ekiti (6), Imo (6), Kaduna (4), Kwara (4), Ondo (4), Ogun (3), Osun (3), Bayelsa (1), Edo (1), Kano (1).
+                            <li>The 97 new cases are reported from 12 states- Lagos (46), Kwara (12), Rivers (11), Adamawa (4), Niger (4), Ogun (4), Osun (4), Ekiti (3), Imo (3), Kaduna (3), Plateau (2), FCT (1).
                             </li>
                         </ul>
                     </div>
