--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 20th of September 2020, 97 new confirmed cases and 3 deaths were recorded in Nigeria
+                            <li>On the 22nd of September 2020, 176 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 57242 cases have been confirmed, 48569 cases have been discharged and 1098 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 57613 cases have been confirmed, 48836 cases have been discharged and 1100 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 97 new cases are reported from 12 states- Lagos (46), Kwara (12), Rivers (11), Adamawa (4), Niger (4), Ogun (4), Osun (4), Ekiti (3), Imo (3), Kaduna (3), Plateau (2), FCT (1).
+                            <li>The 176 new cases are reported from 14 states- Lagos (73), Plateau (50), FCT (17), Rivers (8), Ondo (6), Niger (5), Ogun (5), Edo (3), Kaduna (3), Oyo (2), Bauchi (1), Bayelsa (1), Delta (1), Nasarawa (1).
                             </li>
                         </ul>
                     </div>
