--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 22nd of September 2020, 176 new confirmed cases were recorded in Nigeria
+                            <li>On the 23rd of September 2020, 111 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 57613 cases have been confirmed, 48836 cases have been discharged and 1100 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 57724 cases have been confirmed, 48985 cases have been discharged and 1102 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 176 new cases are reported from 14 states- Lagos (73), Plateau (50), FCT (17), Rivers (8), Ondo (6), Niger (5), Ogun (5), Edo (3), Kaduna (3), Oyo (2), Bauchi (1), Bayelsa (1), Delta (1), Nasarawa (1).
+                            <li>The 111 new cases are reported from 12 states- Lagos (31), Gombe (18), Kaduna (18), FCT (15), Rivers (14), Imo (3), Kwara (3), Oyo (3), Bayelsa (2), Ogun (2), Edo (1), Osun (1)
+                                .
                             </li>
                         </ul>
                     </div>
