--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 23rd of September 2020, 111 new confirmed cases and 2 deaths were recorded in Nigeria
+                            <li>On the 24th of September 2020, 125 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 57724 cases have been confirmed, 48985 cases have been discharged and 1102 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 57849 cases have been confirmed, 49098 cases have been discharged and 1102 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 111 new cases are reported from 12 states- Lagos (31), Gombe (18), Kaduna (18), FCT (15), Rivers (14), Imo (3), Kwara (3), Oyo (3), Bayelsa (2), Ogun (2), Edo (1), Osun (1)
+                            <li>The 125 new cases are reported from 13 states- Lagos (37), Plateau (18), FCT (17), Ogun (15), Rivers (10), Benue (7), Kaduna (7), Anambra (5), Oyo (3), Cross River (2), Ondo (2), Edo (1), Imo (1)
                                 .
                             </li>
                         </ul>
