--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 24th of September 2020, 125 new confirmed cases were recorded in Nigeria
+                            <li>On the 25th of September 2020, 213 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 57849 cases have been confirmed, 49098 cases have been discharged and 1102 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 58062 cases have been confirmed, 49606 cases have been discharged and 1103 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 125 new cases are reported from 13 states- Lagos (37), Plateau (18), FCT (17), Ogun (15), Rivers (10), Benue (7), Kaduna (7), Anambra (5), Oyo (3), Cross River (2), Ondo (2), Edo (1), Imo (1)
+                            <li>The 213 new cases are reported from 17 states- Lagos (51), Plateau (51), FCT (29), Rivers (18), Ondo (12), Oyo (9), Osun (8), Gombe (7), Ogun (7), Kaduna (5), Enugu (4), Edo (3), Jigawa (3), Kano (3), Benue (1), Delta (1), Sokoto (1)
                                 .
                             </li>
                         </ul>
