--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 25th of September 2020, 213 new confirmed cases and 2 deaths were recorded in Nigeria
+                            <li>On the 26th of September 2020, 136 new confirmed cases and 3 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 58062 cases have been confirmed, 49606 cases have been discharged and 1103 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 58198 cases have been confirmed, 49722 cases have been discharged and 1106 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 213 new cases are reported from 17 states- Lagos (51), Plateau (51), FCT (29), Rivers (18), Ondo (12), Oyo (9), Osun (8), Gombe (7), Ogun (7), Kaduna (5), Enugu (4), Edo (3), Jigawa (3), Kano (3), Benue (1), Delta (1), Sokoto (1)
+                            <li>The 136 new cases are reported from 16 states- Lagos (41), Ogun (27), Rivers (19), Abia (10), Oyo (6), Plateau (6), Bauchi (5), Ondo (5), Ekiti (4), Kaduna (4), Edo (3), Ebonyi (2), Bayelsa (1), Delta (1), Osun (1), Yobe (1)
                                 .
                             </li>
                         </ul>
