--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 28th of September 2020, 136 new confirmed cases and 3 deaths were recorded in Nigeria
+                            <li>On the 29th of September 2020, 187 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 58460 cases have been confirmed, 49895 cases have been discharged and 1111 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 58647 cases have been confirmed, 49937 cases have been discharged and 1111 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 136 new cases are reported from 13 states- Lagos (71), Rivers (23), Plateau (12), Adamawa (6), Oyo (6), Kaduna (5), Abia (3), FCT (3), Katsina (2), Kwara (2), Bauchi (1), Borno (1), Edo (1)
+                            <li>The 187 new cases are reported from 13 states- Lagos (74), Plateau (25), Rivers (25), Gombe (19), FCT (19), Osun (10), Kaduna (5), Borno (3), Ogun (2), Katsina (2), Nasarawa (1), Bayelsa (1), Edo (1)
                                 .
                             </li>
                         </ul>
