--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 29th of September 2020, 187 new confirmed cases were recorded in Nigeria
+                            <li>On the 30th of September 2020, 201 new confirmed cases and 1 death was recorded in Nigeria
                                 .</li>
-                            <li>Till date, 58647 cases have been confirmed, 49937 cases have been discharged and 1111 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 58848 cases have been confirmed, 50358 cases have been discharged and 1112 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 187 new cases are reported from 13 states- Lagos (74), Plateau (25), Rivers (25), Gombe (19), FCT (19), Osun (10), Kaduna (5), Borno (3), Ogun (2), Katsina (2), Nasarawa (1), Bayelsa (1), Edo (1)
+                            <li>The 201 new cases are reported from 13 states- Lagos (77), Rivers (37), Plateau (25), FCT (13), Kaduna (12), Ogun (12), Adamawa (8), Taraba (7), Imo (4), Kwara (2), Osun (2), Abia (1), Oyo (1)
                                 .
                             </li>
                         </ul>
