--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 30th of September 2020, 201 new confirmed cases and 1 death was recorded in Nigeria
+                            <li>On the 1st of October 2020, 153 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 58848 cases have been confirmed, 50358 cases have been discharged and 1112 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 59001 cases have been confirmed, 50452 cases have been discharged and 1112 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 201 new cases are reported from 13 states- Lagos (77), Rivers (37), Plateau (25), FCT (13), Kaduna (12), Ogun (12), Adamawa (8), Taraba (7), Imo (4), Kwara (2), Osun (2), Abia (1), Oyo (1)
+                            <li>The 153 new cases are reported from 14 states- Lagos (81), Rivers (21), FCT (11), Ogun (8), Kaduna (7), Oyo (6), Akwa Ibom (5), Osun (3), Katsina (3), Edo (2), Ebonyi (2), Nasarawa (2), Plateau (1), Kano (1)
                                 .
                             </li>
                         </ul>
