--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 1st of October 2020, 153 new confirmed cases were recorded in Nigeria
+                            <li>On the 2nd of October 2020, 126 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 59001 cases have been confirmed, 50452 cases have been discharged and 1112 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 59127 cases have been confirmed, 50593 cases have been discharged and 1112 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 153 new cases are reported from 14 states- Lagos (81), Rivers (21), FCT (11), Ogun (8), Kaduna (7), Oyo (6), Akwa Ibom (5), Osun (3), Katsina (3), Edo (2), Ebonyi (2), Nasarawa (2), Plateau (1), Kano (1)
+                            <li>The 126 new cases are reported from 12 states- Lagos (62), Rivers (22), Ogun (9), Plateau (7), FCT (7), Osun (5), Kwara (5), Taraba (3), Bayelsa (2), Abia (2), Zamfara (1), Imo (1)
                                 .
                             </li>
                         </ul>
