--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 2nd of October 2020, 126 new confirmed cases were recorded in Nigeria
+                            <li>On the 3rd of October 2020, 160 new confirmed cases and 1 death was recorded in Nigeria
                                 .</li>
-                            <li>Till date, 59127 cases have been confirmed, 50593 cases have been discharged and 1112 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 59287 cases have been confirmed, 50718 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 126 new cases are reported from 12 states- Lagos (62), Rivers (22), Ogun (9), Plateau (7), FCT (7), Osun (5), Kwara (5), Taraba (3), Bayelsa (2), Abia (2), Zamfara (1), Imo (1)
+                            <li>The 160 new cases are reported from 13 states- Rivers (42), Lagos (32), Plateau (21), FCT (18), Kaduna (14), Ogun (11), Katsina (10), Kwara (3), Ondo (3), Imo (3), Anambra (1), Abia (1), Oyo (1)
                                 .
                             </li>
                         </ul>
