--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 3rd of October 2020, 160 new confirmed cases and 1 death was recorded in Nigeria
+                            <li>On the 4th of October 2020, 58 new confirmed cases were recorded in Nigeria
                                 .</li>
                             <li>Till date, 59287 cases have been confirmed, 50718 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
