--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 .</li>
                             <li>Till date, 59345 cases have been confirmed, 50768 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 160 new cases are reported from 13 states- Rivers (42), Lagos (32), Plateau (21), FCT (18), Kaduna (14), Ogun (11), Katsina (10), Kwara (3), Ondo (3), Imo (3), Anambra (1), Abia (1), Oyo (1)
+                            <li>The 58 new cases are reported from 9 states- Plateau (18), Lagos (15), Katsina (10), Ogun (5), Kaduna (4), Edo (3), Ekiti (1), FCT (1), Ondo (1)
                                 .
                             </li>
                         </ul>
