--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 4th of October 2020, 58 new confirmed cases were recorded in Nigeria
+                            <li>On the 5th of October 2020, 120 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 59345 cases have been confirmed, 50768 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 59465 cases have been confirmed, 50951 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 58 new cases are reported from 9 states- Plateau (18), Lagos (15), Katsina (10), Ogun (5), Kaduna (4), Edo (3), Ekiti (1), FCT (1), Ondo (1)
+                            <li>The 120 new cases are reported from 13 states- Rivers (65), FCT (12), Ogun (9), Katsina (8), Anambra (7), Bauchi (5), Oyo (5), Nasarawa (3), Kaduna (2), Kwara (1), Taraba (1), Imo (1), Delta (1)
                                 .
                             </li>
                         </ul>
