--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 5th of October 2020, 120 new confirmed cases were recorded in Nigeria
+                            <li>On the 6th of October 2020, 118 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 59465 cases have been confirmed, 50951 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 59583 cases have been confirmed, 51308 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 120 new cases are reported from 13 states- Rivers (65), FCT (12), Ogun (9), Katsina (8), Anambra (7), Bauchi (5), Oyo (5), Nasarawa (3), Kaduna (2), Kwara (1), Taraba (1), Imo (1), Delta (1)
+                            <li>The 118 new cases are reported from 14 states- Lagos (41), Rivers (19), Osun (17), Nasarawa (13), Kaduna (5), Anambra (5), Edo (3), Ogun (3), Kwara (3), Ondo (3), Katsina (2), Niger (2), Plateau (1), Akwa Ibom (1)
                                 .
                             </li>
                         </ul>
