--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 6th of October 2020, 118 new confirmed cases were recorded in Nigeria
+                            <li>On the 7th of October 2020, 155 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 59583 cases have been confirmed, 51308 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 59738 cases have been confirmed, 51403 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 118 new cases are reported from 14 states- Lagos (41), Rivers (19), Osun (17), Nasarawa (13), Kaduna (5), Anambra (5), Edo (3), Ogun (3), Kwara (3), Ondo (3), Katsina (2), Niger (2), Plateau (1), Akwa Ibom (1)
+                            <li>The 155 new cases are reported from 8 states- Lagos (84), Rivers (31), Kaduna (12), Osun (10), FCT (7), Oyo (6), Ogun (3), Kwara (2)
                                 .
                             </li>
                         </ul>
