--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 7th of October 2020, 155 new confirmed cases were recorded in Nigeria
+                            <li>On the 8th of October 2020, 103 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 59738 cases have been confirmed, 51403 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 59841 cases have been confirmed, 51551 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 155 new cases are reported from 8 states- Lagos (84), Rivers (31), Kaduna (12), Osun (10), FCT (7), Oyo (6), Ogun (3), Kwara (2)
+                            <li>The 103 new cases are reported from 13 states- Lagos (39), Rivers (21), FCT (19), Oyo (6) Kaduna (4), Bauchi (3), Ogun (3), Imo (2), Kano (2), Benue (1), Edo (1), Nasarawa (1), Plateau (1)
                                 .
                             </li>
                         </ul>
