--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 8th of October 2020, 103 new confirmed cases were recorded in Nigeria
+                            <li>On the 9th of October 2020, 151 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 59841 cases have been confirmed, 51551 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 59992 cases have been confirmed, 51614 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 103 new cases are reported from 13 states- Lagos (39), Rivers (21), FCT (19), Oyo (6) Kaduna (4), Bauchi (3), Ogun (3), Imo (2), Kano (2), Benue (1), Edo (1), Nasarawa (1), Plateau (1)
+                            <li>The 151 new cases are reported from 10 states- Lagos (71), Ogun (26), Kaduna (17), Osun (10), Oyo (8), FCT (6), Rivers (6), Plateau (5), Akwa Ibom (1), Ekiti (1)
                                 .
                             </li>
                         </ul>
