--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 9th of October 2020, 151 new confirmed cases were recorded in Nigeria
+                            <li>On the 10th of October 2020, 111 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 59992 cases have been confirmed, 51614 cases have been discharged and 1113 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 60103 cases have been confirmed, 51711 cases have been discharged and 1115 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 151 new cases are reported from 10 states- Lagos (71), Ogun (26), Kaduna (17), Osun (10), Oyo (8), FCT (6), Rivers (6), Plateau (5), Akwa Ibom (1), Ekiti (1)
+                            <li>The 111 new cases are reported from 11 states- Plateau (32), Lagos (23), FCT (15), Osun (11), Ogun (9), Oyo (6), Imo (4), Bauchi (3), Kaduna (3), Yobe (3), Rivers (2)
                                 .
                             </li>
                         </ul>
