--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 11th of October 2020, 163 new confirmed cases were recorded in Nigeria
+                            <li>On the 12th of October 2020, 164 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 60266 cases have been confirmed, 51735 cases have been discharged and 1115 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 60430 cases have been confirmed, 51943 cases have been discharged and 1115 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 163 new cases are reported from 12 states- Lagos (113), Kaduna (21), Osun (8), Ondo (5), Oyo (5), Ogun (3), Bayelsa (2), Taraba (2), Edo (1), FCT (1), Katsina (1), Plateau (1)
+                            <li>The 164 new cases are reported from 15 states- Lagos (64), FCT (26), Enugu (20), Kaduna (11), Oyo (11), Plateau (8), Ondo (7), Anambra (4), Nasarawa (3), Osun (3), Ebonyi (2), Imo (2), Benue (1), Katsina (1), Ogun (1)
                                 .
                             </li>
                         </ul>
