--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 12th of October 2020, 164 new confirmed cases were recorded in Nigeria
+                            <li>On the 13th of October 2020, 225 new confirmed cases and 1 death were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 60430 cases have been confirmed, 51943 cases have been discharged and 1115 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 60655 cases have been confirmed, 52006 cases have been discharged and 1116 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
                             <li>The 164 new cases are reported from 15 states- Lagos (64), FCT (26), Enugu (20), Kaduna (11), Oyo (11), Plateau (8), Ondo (7), Anambra (4), Nasarawa (3), Osun (3), Ebonyi (2), Imo (2), Benue (1), Katsina (1), Ogun (1)
                                 .
